links to portals

--- a/index.html
+++ b/index.html
@@ -95,56 +95,76 @@
         <h3>things I've built</h3>
         <h4>A collection of projects I've built, both personally and professionally: </h4>
         <div class="experience-projects">
-            <div class="experience-projects_item">
-                <div class="experience-projects_item-imageContainer">
-                    <img class="experience-projects_item-image" src="images/encore.png" />
-                </div>
-                <div class="experience-projects_item-content">
-                    <h5 class="experience-project_item-title">Encore Bank</h5>
-                    <p><span>Role:</span> Lead Developer, Speak Creative</p>
-                    <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD</p>
-                </div>
+            <div class="experience-project_item-container">
+                <a href="https://www.bankencore.com/" target="_blank">
+                    <div class="experience-projects_item">
+                        <div class="experience-projects_item-imageContainer">
+                            <img class="experience-projects_item-image" src="images/encore.png" />
+                        </div>
+                        <div class="experience-projects_item-content">
+                            <h5 class="experience-project_item-title">Encore Bank</h5>
+                            <p><span>Role:</span> Lead Developer, Speak Creative</p>
+                            <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="experience-projects_item">
-                <div class="experience-projects_item-imageContainer">
-                    <img class="experience-projects_item-image" src="images/catalina.png" />
-                </div>
-                <div class="experience-projects_item-content">
-                    <h5 class="experience-project_item-title">Catalina Museum for Art & History</h5>
-                    <p><span>Role: </span> Lead Developer, Speak Creative</p>
-                    <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD</p>
-                </div>
+            <div class="experience-project_item-container">
+                <a href="https://www.catalinamuseum.org/" target="_blank">
+                    <div class="experience-projects_item">
+                        <div class="experience-projects_item-imageContainer">
+                            <img class="experience-projects_item-image" src="images/catalina.png" />
+                        </div>
+                        <div class="experience-projects_item-content">
+                            <h5 class="experience-project_item-title">Catalina Museum for Art & History</h5>
+                            <p><span>Role: </span> Lead Developer, Speak Creative</p>
+                            <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="experience-projects_item">
-                <div class="experience-projects_item-imageContainer">
-                    <img class="experience-projects_item-image" src="images/look-for-book.png" />
-                </div>
-                <div class="experience-projects_item-content">
-                    <h5 class="experience-project_item-title">Look for a Book</h5>
-                    <p>Personal Project</p>
-                    <p><span>Technologies: </span>HTML, CSS, React</p>
-                </div>
+            <div class="experience-project_item-container">
+                <a href="https://ninakalpakis.github.io/book-search-engine/" target="_blank">
+                    <div class="experience-projects_item">
+                        <div class="experience-projects_item-imageContainer">
+                            <img class="experience-projects_item-image" src="images/look-for-book.png" />
+                        </div>
+                        <div class="experience-projects_item-content">
+                            <h5 class="experience-project_item-title">Look for a Book</h5>
+                            <p>Personal Project</p>
+                            <p><span>Technologies: </span>HTML, CSS, React</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="experience-projects_item">
-                <div class="experience-projects_item-imageContainer">
-                    <img class="experience-projects_item-image" src="images/dunavant.png" />
-                </div>
-                <div class="experience-projects_item-content">
-                    <h5 class="experience-project_item-title">Dunavant Logistics</h5>
-                    <p><span>Role: </span>Lead Developer, Speak Creative</p>
-                    <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD</p>
-                </div>
+            <div class="experience-project_item-container">
+                <a href="https://www.dunavant.com/" target="_blank">
+                    <div class="experience-projects_item">
+                        <div class="experience-projects_item-imageContainer">
+                            <img class="experience-projects_item-image" src="images/dunavant.png" />
+                        </div>
+                        <div class="experience-projects_item-content">
+                            <h5 class="experience-project_item-title">Dunavant Logistics</h5>
+                            <p><span>Role: </span>Lead Developer, Speak Creative</p>
+                            <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD</p>
+                        </div>
+                    </div>
+                </a>
             </div>
-            <div class="experience-projects_item">
-                <div class="experience-projects_item-imageContainer">
-                    <img class="experience-projects_item-image" src="images/sco.png" />
-                </div>
-                <div class="experience-projects_item-content">
-                    <h5 class="experience-project_item-title">Southern College of Optometry</h5>
-                    <p><span>Role: </span>Retainer Developer, Speak Creative</p>
-                    <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD, Adobe
-                        Illustrator</p>
-                </div>
+            <div class="experience-project_item-container">
+                <a href="https://www.sco.edu/" target="_blank">
+                    <div class="experience-projects_item">
+                        <div class="experience-projects_item-imageContainer">
+                            <img class="experience-projects_item-image" src="images/sco.png" />
+                        </div>
+                        <div class="experience-projects_item-content">
+                            <h5 class="experience-project_item-title">Southern College of Optometry</h5>
+                            <p><span>Role: </span>Retainer Developer, Speak Creative</p>
+                            <p><span>Technologies: </span>HTML, CSS/sCSS, JavaScript/jQuery, SiteWrench, AdobeXD, Adobe
+                                Illustrator</p>
+                        </div>
+                    </div>
+                </a>
             </div>
         </div>
     </section>
