--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>NFK</title>
+    <title>Nina Kalpakis</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -29,15 +29,27 @@
 </head>
 
 <header>
-    <div id="menu">
-        <div class="hamburger"></div>
+    <div id="sidecar">
+        <div id="menu">
+            <div class="hamburger"></div>
+        </div>
+        <div id="nav-bar">
+            <nav>
+                <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
+                <li><a href="#skills">Skills</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </nav>
+        </div>
     </div>
-    <div id="nav-bar">
-        <nav>
+    <div id="desktop-nav">
+        <nav class="desktop-nav">
             <li><a href="#about">About</a></li>
             <li><a href="#experience">Experience</a></li>
             <li><a href="#skills">Skills</a></li>
             <li><a href="#contact">Contact</a></li>
+            <!-- <li><a href="https://drive.google.com/file/d/1buZIGYEBdFFaT2iO4Bcuk5BS9Chi2On8/view?usp=sharing"
+                    target="_blank">Résumé</a></li> -->
         </nav>
     </div>
 </header>
@@ -220,7 +232,7 @@
             <a class="icon" href="https://drive.google.com/file/d/1buZIGYEBdFFaT2iO4Bcuk5BS9Chi2On8/view?usp=sharing"
                 target="_blank"><i class="fa-solid fa-briefcase"></i></a>
         </div>
-        <p>designed + developed with love by nina kalpakis</p>
+        <p>designed + developed by nina kalpakis</p>
     </section>
 
     <script src="index.js"></script>
